// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders about page unchanged 1`] = `
<div>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <div>
        <h1
          role="heading"
        >
          Logo
        </h1>
      </div>
      <div>
        <nav
          class="nav"
        >
          <ul>
            <li>
              <a
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main>
      <h2
        role="heading"
      >
        About
      </h2>
      <article>
        <section>
          <p>
            This web application is built using NextJS, React, Jest, Modular CSS etc etc
          </p>
        </section>
      </article>
    </main>
    <footer>
      Developed by Finbar Maginn
    </footer>
  </div>
</div>
`;

exports[`renders homepage unchanged 1`] = `
<div>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <div>
        <h1
          role="heading"
        >
          Logo
        </h1>
      </div>
      <div>
        <nav
          class="nav"
        >
          <ul>
            <li>
              <a
                href="/"
              >
                Home
              </a>
            </li>
            <li>
              <a
                href="/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <main>
      <h2
        role="heading"
      >
        Home
      </h2>
    </main>
    <footer>
      Developed by Finbar Maginn
    </footer>
  </div>
</div>
`;
